test/extern/ferguson/c-array/c_array-anymanaged.chpl
use CTypes;

class A {}

var a = new c_array(A, 10);
